// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkTile should match snapshot 1`] = `
<styled.a
  href="http://"
  target="_blank"
>
  <Tile
    color="yellow"
  >
    tuile
  </Tile>
</styled.a>
`;

exports[`QuoteTile should match snapshot 1`] = `
<Tile
  color="#444"
>
  <styled.blockquote>
    coucou
  </styled.blockquote>
</Tile>
`;

exports[`Tile should match snapshot 1`] = `
<styled.div
  color="yellow"
>
  tuile
</styled.div>
`;

exports[`VideoTile should match snapshot 1`] = `
<LinkTile
  url="http://"
>
  <styled.div
    thumbnail="http://"
  />
  <styled.div>
    <Play />
    <styled.div>
      <styled.p />
      <Styled(styled.p) />
    </styled.div>
  </styled.div>
</LinkTile>
`;

exports[`VideoTile should match snapshot 2`] = `
<LinkTile
  url="http://"
>
  <styled.div
    thumbnail="http://"
  />
  <styled.div>
    <Styled(More) />
  </styled.div>
</LinkTile>
`;
